dropdown fix and test coverage

--- a/frontend/src/components/styles/filter.scss
+++ b/frontend/src/components/styles/filter.scss
@@ -1,5 +1,12 @@
+@media (max-width: 575.98px) { 
+  .filter-option{
+    .ratings{
+      font-size: 1.5em !important;
+    }
+  }
+}
 .filter-option{
   .ratings{
-    font-size: 2.5em;
+    font-size: 1.5rem;
   }
 }
