--- a/frontend/src/components/styles/layout.scss
+++ b/frontend/src/components/styles/layout.scss
@@ -29,3 +29,34 @@
     font-size: 1.6em;
   }
 }
+
+.loading{
+  position: fixed;
+  top:50%;
+  left:50%;
+  .spinner {   
+    border: 5px solid #f3f3f3;  
+    border-radius: 50%;
+    border-top: 5px solid #3498db;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+}
+
+.blank-space-10{
+  height:10px;
+  clear:both;
+}
